--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="banner" src="img\banner.jpg" />
             
             <section class="principal">
-                <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+                <h2 class="title-main">Sobre a Barbearia Alura</h2>
 
                 <img class="utensilios" src="img\utensilios.jpg" />
 
@@ -49,7 +49,7 @@
             </section>
 
             <section class="mapa">
-                <h3 class="titulo-principal">Nosso estabelecimento</h3>
+                <h3 class="title-main">Nosso estabelecimento</h3>
 
                 <p>Nosso estabelecimento está localizado no coração da cidade</p>
 
@@ -60,7 +60,7 @@
             </section>
 
             <section class="beneficios">
-                <h3 class="titulo-principal">Benefícios</h3>
+                <h3 class="title-main">Benefícios</h3>
 
                 <div class="conteudo-beneficios">
                     <ul class="lista-beneficios">
