--- a/produtos.html
+++ b/produtos.html
@@ -26,27 +26,27 @@
         </header>
 
         <main>
-            <section class="produtos">
-                <ul class="lista-produtos">
+            <section class="product">
+                <ul class="product-list">
                     <li>
                         <h2>Cabelo</h2>
                         <img src="img/cabelo.jpg" />
-                        <p class="desc-produto">Na teroura ou máquina, como o cliente preferir</p>
-                        <p class="preco-produto">R$ 25,00</p>
+                        <p class="product-desc">Na teroura ou máquina, como o cliente preferir</p>
+                        <p class="product-price">R$ 25,00</p>
                     </li>
 
                     <li>
                         <h2>Barba</h2>
                         <img src="img/barba.jpg" />
-                        <p class="desc-produto">Corte e desenho profissional de barba</p>
-                        <p class="preco-produto">R$ 18,00</p>
+                        <p class="product-desc">Corte e desenho profissional de barba</p>
+                        <p class="product-price">R$ 18,00</p>
                     </li>
 
                     <li>
                         <h2>Cabelo+Barba</h2>
                         <img src="img/cabelo+barba.jpg" />
-                        <p class="desc-produto">Pacote completo de cabelo e barba</p>
-                        <p class="preco-produto">R$ 35,00</p>
+                        <p class="product-desc">Pacote completo de cabelo e barba</p>
+                        <p class="product-price">R$ 35,00</p>
                     </li>
                 </ul>
         </main>
